# vcpkg_demo_win

./: CMakeLists.txt  LICENSE  README.md  build.sh  vcpkg copy.json  vcpkg-configuration.json  vcpkg.json
src/: main.cpp  main2.cpp
